--- a/packages/paste-website/src/pages/core/upgrade-guide.mdx
+++ b/packages/paste-website/src/pages/core/upgrade-guide.mdx
@@ -56,7 +56,7 @@ export const pageQuery = graphql`
 
 - [Icons] All Icon components had `React.forwardRef` added to them.
 
-  **ACTION NEEDED**: None, but you should be aware of the change due to the fact that refs on Icons are now be assigned differently, and there is the potential for exported types to be different.
+  **ACTION NEEDED**: None, but you should be aware of the change due to the fact that refs on Icons are now assigned differently, and there is the potential for exported types to be different.
 
 ### Core 11.0.0
 
